Fix dedup bug and add pins to version for better stability

--- a/nbs/01_filter.ipynb
+++ b/nbs/01_filter.ipynb
@@ -34,11 +34,12 @@
     "import random\n",
     "import re\n",
     "\n",
+    "import dill as pickle\n",
     "import networkit as nk\n",
     "import numpy as np\n",
     "\n",
     "from collections import Counter\n",
-    "from datasets import Dataset\n",
+    "from datasets import Dataset, Features, Value, Sequence\n",
     "from datasketch import LeanMinHash, MinHash, MinHashLSH\n",
     "from rich.logging import RichHandler\n",
     "from squeakily.helpers import flagged_words, get_words\n",
@@ -56,7 +57,9 @@
     "logger.setLevel(logging.INFO)\n",
     "logger.addHandler(RichHandler(rich_tracebacks=True))\n",
     "logger.propagate = False\n",
-    "datasets.logging.set_verbosity_error()"
+    "datasets.logging.set_verbosity_error()\n",
+    "# Turn off logging for datasets\n",
+    "logging.getLogger(\"datasets\").setLevel(logging.ERROR)"
    ]
   },
   {
@@ -515,23 +518,24 @@
     "        threshold=threshold,\n",
     "        num_perm=num_perm,\n",
     "    )\n",
-    "\n",
+    "    logger.info(f\"Dataset columns: {ds.column_names}\")\n",
+    "    column_names = ds.column_names\n",
     "    ds = ds.map(\n",
     "        lambda _, idx: {\"__id__\": idx},\n",
     "        with_indices=True,\n",
     "        num_proc=os.cpu_count(),\n",
     "        desc=\"Adding index...\",\n",
     "    )\n",
-    "\n",
+    "    logger.info(f\"Dataset columns: {ds.column_names}\")\n",
     "    hashed_ds = ds.map(\n",
     "        function=_hash_func,\n",
     "        fn_kwargs={\"num_perm\": num_perm},\n",
     "        input_columns=[\"__id__\", column],\n",
-    "        remove_columns=[column],\n",
+    "        remove_columns=column_names,\n",
     "        num_proc=os.cpu_count(),\n",
     "        desc=f\"Fingerprinting...\",\n",
     "    )\n",
-    "\n",
+    "    logger.info(f\"Dataset columns: {hashed_ds.column_names}\")\n",
     "    with lsh.insertion_session() as session:\n",
     "        for data in tqdm(hashed_ds, desc=\"Indexing signatures...\"):\n",
     "            if data[\"__id__\"] in lsh:\n",
@@ -557,10 +561,15 @@
     "        lambda x, y: _query_content(x, y, index=lsh),\n",
     "        num_proc=os.cpu_count(),\n",
     "        # new_fingerprint=hashlib.md5(pickle.dumps(conf)).hexdigest(),\n",
+    "        features=Features({\n",
+    "            \"__id__\": Value(dtype='int64', id=None),\n",
+    "            \"__neighbors__\": Sequence(feature=Value(dtype='int64', id=None), length=-1, id=None)\n",
+    "        }),\n",
     "        input_columns=[\"__id__\", \"__signature__\"],\n",
     "        remove_columns=[\"__signature__\"],\n",
     "        desc=f\"Querying...\",\n",
     "    )\n",
+    "    logger.info(f\"Dataset columns: {queried.column_names}\")\n",
     "\n",
     "    del lsh\n",
     "    gc.collect()\n",
@@ -595,66 +604,70 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">[11/24/22 19:39:36] </span><span style=\"color: #000080; text-decoration-color: #000080\">INFO    </span> Dataset columns: <span style=\"font-weight: bold\">[</span><span style=\"color: #008000; text-decoration-color: #008000\">'text'</span><span style=\"font-weight: bold\">]</span>                                             <a href=\"file:///tmp/ipykernel_43483/3015929395.py\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">3015929395.py</span></a><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">:</span><a href=\"file:///tmp/ipykernel_43483/3015929395.py#20\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">20</span></a>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[2;36m[11/24/22 19:39:36]\u001b[0m\u001b[2;36m \u001b[0m\u001b[34mINFO    \u001b[0m Dataset columns: \u001b[1m[\u001b[0m\u001b[32m'text'\u001b[0m\u001b[1m]\u001b[0m                                             \u001b]8;id=16810;file:///tmp/ipykernel_43483/3015929395.py\u001b\\\u001b[2m3015929395.py\u001b[0m\u001b]8;;\u001b\\\u001b[2m:\u001b[0m\u001b]8;id=521335;file:///tmp/ipykernel_43483/3015929395.py#20\u001b\\\u001b[2m20\u001b[0m\u001b]8;;\u001b\\\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">[11/24/22 19:39:38] </span><span style=\"color: #000080; text-decoration-color: #000080\">INFO    </span> Dataset columns: <span style=\"font-weight: bold\">[</span><span style=\"color: #008000; text-decoration-color: #008000\">'text'</span>, <span style=\"color: #008000; text-decoration-color: #008000\">'__id__'</span><span style=\"font-weight: bold\">]</span>                                   <a href=\"file:///tmp/ipykernel_43483/3015929395.py\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">3015929395.py</span></a><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">:</span><a href=\"file:///tmp/ipykernel_43483/3015929395.py#28\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">28</span></a>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[2;36m[11/24/22 19:39:38]\u001b[0m\u001b[2;36m \u001b[0m\u001b[34mINFO    \u001b[0m Dataset columns: \u001b[1m[\u001b[0m\u001b[32m'text'\u001b[0m, \u001b[32m'__id__'\u001b[0m\u001b[1m]\u001b[0m                                   \u001b]8;id=583158;file:///tmp/ipykernel_43483/3015929395.py\u001b\\\u001b[2m3015929395.py\u001b[0m\u001b]8;;\u001b\\\u001b[2m:\u001b[0m\u001b]8;id=40028;file:///tmp/ipykernel_43483/3015929395.py#28\u001b\\\u001b[2m28\u001b[0m\u001b]8;;\u001b\\\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">[11/24/22 19:39:40] </span><span style=\"color: #000080; text-decoration-color: #000080\">INFO    </span> Dataset columns: <span style=\"font-weight: bold\">[</span><span style=\"color: #008000; text-decoration-color: #008000\">'__id__'</span>, <span style=\"color: #008000; text-decoration-color: #008000\">'__signature__'</span><span style=\"font-weight: bold\">]</span>                          <a href=\"file:///tmp/ipykernel_43483/3015929395.py\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">3015929395.py</span></a><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">:</span><a href=\"file:///tmp/ipykernel_43483/3015929395.py#37\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">37</span></a>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[2;36m[11/24/22 19:39:40]\u001b[0m\u001b[2;36m \u001b[0m\u001b[34mINFO    \u001b[0m Dataset columns: \u001b[1m[\u001b[0m\u001b[32m'__id__'\u001b[0m, \u001b[32m'__signature__'\u001b[0m\u001b[1m]\u001b[0m                          \u001b]8;id=873495;file:///tmp/ipykernel_43483/3015929395.py\u001b\\\u001b[2m3015929395.py\u001b[0m\u001b]8;;\u001b\\\u001b[2m:\u001b[0m\u001b]8;id=904110;file:///tmp/ipykernel_43483/3015929395.py#37\u001b\\\u001b[2m37\u001b[0m\u001b]8;;\u001b\\\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                        "
+      "Indexing signatures...: 100%|██████████| 1000/1000 [00:00<00:00, 9945.99it/s]\n"
      ]
     },
     {
      "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6a2fe42bcff84bdda39eaf408e72f296",
-       "version_major": 2,
-       "version_minor": 0
-      },
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">[11/24/22 19:39:44] </span><span style=\"color: #000080; text-decoration-color: #000080\">INFO    </span> Dataset columns: <span style=\"font-weight: bold\">[</span><span style=\"color: #008000; text-decoration-color: #008000\">'__id__'</span>, <span style=\"color: #008000; text-decoration-color: #008000\">'__neighbors__'</span><span style=\"font-weight: bold\">]</span>                          <a href=\"file:///tmp/ipykernel_43483/3015929395.py\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">3015929395.py</span></a><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">:</span><a href=\"file:///tmp/ipykernel_43483/3015929395.py#71\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">71</span></a>\n",
+       "</pre>\n"
+      ],
       "text/plain": [
-       "Indexing signatures...:   0%|          | 0/1000 [00:00<?, ?it/s]"
+       "\u001b[2;36m[11/24/22 19:39:44]\u001b[0m\u001b[2;36m \u001b[0m\u001b[34mINFO    \u001b[0m Dataset columns: \u001b[1m[\u001b[0m\u001b[32m'__id__'\u001b[0m, \u001b[32m'__neighbors__'\u001b[0m\u001b[1m]\u001b[0m                          \u001b]8;id=477832;file:///tmp/ipykernel_43483/3015929395.py\u001b\\\u001b[2m3015929395.py\u001b[0m\u001b]8;;\u001b\\\u001b[2m:\u001b[0m\u001b]8;id=324495;file:///tmp/ipykernel_43483/3015929395.py#71\u001b\\\u001b[2m71\u001b[0m\u001b]8;;\u001b\\\n"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                        "
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f0627aca320e4d26bdb86b092a7acd5d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Constructing graph...:   0%|          | 0/373 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f1de094a1e694977bb7b0e85a7757ffd",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Iterating over communities...:   0%|          | 0/635 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "            "
+      "Constructing graph...: 100%|██████████| 373/373 [00:00<00:00, 4547.52it/s]\n",
+      "Iterating over communities...: 100%|██████████| 635/635 [00:00<00:00, 436620.17it/s]\n"
      ]
     }
    ],
@@ -663,7 +676,8 @@
     "dataset = dataset.select(range(1_000))\n",
     "deduped_dataset = minhash_dedup(dataset, \"text\", community_detection=True, threshold=0.85, num_perm=128)\n",
     "\n",
-    "assert len(deduped_dataset) == len(dataset) - len(dup_ids)"
+    "assert len(deduped_dataset) == len(dataset) - len(dup_ids)\n",
+    "assert deduped_dataset.column_names == dataset.column_names + [\"__id__\"]"
    ]
   },
   {
@@ -719,7 +733,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('squeakily')",
+   "display_name": "squeakily",
    "language": "python",
    "name": "python3"
   }
