Add normalizing whitespace and puntuation

--- a/nbs/01_filter.ipynb
+++ b/nbs/01_filter.ipynb
@@ -223,7 +223,7 @@
    "outputs": [],
    "source": [
     "assert check_flagged_words(\"test\") == True\n",
-    "assert check_flagged_words(\"cougar\") == False"
+    "assert check_flagged_words(\"bdsm\") == False"
    ]
   },
   {
