--- a/nbs/02_clean.ipynb
+++ b/nbs/02_clean.ipynb
@@ -32,7 +32,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'nbdev'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-e54b6621ff5b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#| hide\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mnbdev\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshowdoc\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'nbdev'"
+     ]
+    }
+   ],
    "source": [
     "#| hide\n",
     "from nbdev.showdoc import *"
@@ -45,14 +57,32 @@
    "outputs": [],
    "source": [
     "#| export\n",
+    "# From: https://github.com/bigscience-workshop/data-preparation/blob/main/preprocessing/training/01b_oscar_cleaning_and_filtering/filtering.py#L95\n",
+    "whitespace={\n",
+    "    \" \",\n",
+    "    \" \",\n",
+    "    \" \",\n",
+    "    \" \",\n",
+    "    \" \",\n",
+    "    \"　\",\n",
+    "    \" \",\n",
+    "    \" \",\n",
+    "    \" \",\n",
+    "    \" \",\n",
+    "    \"￼\",\n",
+    "    \"\",\n",
+    "}\n",
+    "\n",
     "def normalize_whitespace(\n",
     "    text: str,  # The text to normalize\n",
     ") -> str:       # The normalized text\n",
     "    \"\"\"\n",
-    "    Replace runs of whitespace with a single space, strip leading/trailing whitespace,\n",
-    "    and normalize all newlines to unix-style newlines.\n",
+    "    Replace the various whitespace characters with the standard one.\n",
     "    \"\"\"\n",
-    "    return re.sub(r\"\\s+\", \" \", text.strip()).replace(\"\\r\\n\", \"\\n\")"
+    "    text = \"\".join(\n",
+    "        [char if char not in whitespace else \" \" for char in text]\n",
+    "    )\n",
+    "    return text"
    ]
   },
   {
@@ -62,7 +92,75 @@
    "outputs": [],
    "source": [
     "# test the normalize_whitespace function\n",
-    "assert normalize_whitespace(\"  foo  bar  \") == \"foo bar\""
+    "assert normalize_whitespace(\"a b c d e　f g h i￼jk\") == \"a b c d e f g h i j k\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "unicode_punctuation = {\n",
+    "    \"，\": \",\",\n",
+    "    \"。\": \".\",\n",
+    "    \"、\": \",\",\n",
+    "    \"„\": '\"',\n",
+    "    \"”\": '\"',\n",
+    "    \"“\": '\"',\n",
+    "    \"«\": '\"',\n",
+    "    \"»\": '\"',\n",
+    "    \"１\": '\"',\n",
+    "    \"」\": '\"',\n",
+    "    \"「\": '\"',\n",
+    "    \"《\": '\"',\n",
+    "    \"》\": '\"',\n",
+    "    \"´\": \"'\",\n",
+    "    \"∶\": \":\",\n",
+    "    \"：\": \":\",\n",
+    "    \"？\": \"?\",\n",
+    "    \"！\": \"!\",\n",
+    "    \"（\": \"(\",\n",
+    "    \"）\": \")\",\n",
+    "    \"；\": \";\",\n",
+    "    \"–\": \"-\",\n",
+    "    \"—\": \" - \",\n",
+    "    \"．\": \". \",\n",
+    "    \"～\": \"~\",\n",
+    "    \"’\": \"'\",\n",
+    "    \"…\": \"...\",\n",
+    "    \"━\": \"-\",\n",
+    "    \"〈\": \"<\",\n",
+    "    \"〉\": \">\",\n",
+    "    \"【\": \"[\",\n",
+    "    \"】\": \"]\",\n",
+    "    \"％\": \"%\",\n",
+    "    \"►\": \"-\",\n",
+    "}\n",
+    "\n",
+    "def normalize_punctuation(\n",
+    "    text: str,  # The text to normalize\n",
+    ") -> str:       # The normalized text\n",
+    "    \"\"\"\n",
+    "    Replace the various unicode punctuation characters with the standard ones.\n",
+    "    \"\"\"\n",
+    "    text = \"\".join(\n",
+    "        [unicode_punctuation.get(char, char) for char in text]\n",
+    "    )\n",
+    "    return text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test the normalize_punctuation function\n",
+    "text = \"，。、„”“«»１」「《》´∶：？！（）；–—．～’…━〈〉【】％►\"\n",
+    "\n",
+    "assert normalize_punctuation(text) == \",.,\\\"\\\"\\\"\\\"\\\"\\\"\\\"\\\"\\\"\\\"\\'::?!();- - . ~\\'...-<>[]%-\""
    ]
   },
   {
@@ -351,7 +449,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3.10.8 ('athena')",
    "language": "python",
    "name": "python3"
   }
