--- a/nbs/03_helpers.ipynb
+++ b/nbs/03_helpers.ipynb
@@ -111,7 +111,7 @@
     "\n",
     "english_flagged_words = [\n",
     "    \"anal\",\n",
-    "    \"bareback\",\n",
+    "    # \"bareback\", # not sure about this one\n",
     "    \"bbw\",\n",
     "    \"bdsm\",\n",
     "    \"blowjob\",\n",
@@ -121,7 +121,7 @@
     "    \"camgirl\",\n",
     "    \"camwhore\",\n",
     "    \"cocksucking\",\n",
-    "    \"cougar\",\n",
+    "    # \"cougar\", # not sure about this one\n",
     "    \"creampie\",\n",
     "    \"cuckold\",\n",
     "    \"cum\",\n",
@@ -137,7 +137,7 @@
     "    \"dildos\",\n",
     "    \"dogging\",\n",
     "    \"doggystyle\",\n",
-    "    \"dominatrix\",\n",
+    "    # \"dominatrix\", # not sure about this one\n",
     "    \"erotic\",\n",
     "    \"fellatio\",\n",
     "    \"femdom\",\n",
@@ -171,7 +171,7 @@
     "    \"redtube\",\n",
     "    \"rimming\",\n",
     "    \"slutty\",\n",
-    "    \"squirting\",\n",
+    "    # \"squirting\", # not sure about this one\n",
     "    \"strapon\",\n",
     "    \"threesome\",\n",
     "    \"vibrator\",\n",
@@ -648,7 +648,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('squeakily')",
+   "display_name": "Python 3.10.8 ('squeakily')",
    "language": "python",
    "name": "python3"
   }
