Add skipping globals. Closes #2

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -2864,13 +2864,30 @@
    "source": [
     ":::{.callout-note}\n",
     "Note: If you use global filters or cleaners, all datasets must have a common column name in order to properly concatenate them.\n",
+    ":::\n",
+    "\n",
+    ":::{.callout-note}\n",
+    "Note: You can also specifiy if you want a specific dataset to be skipped by setting the `skip_global` parameter to `True` when defining the datasource.\n",
+    "\n",
+    "```python\n",
+    "datasources = [\n",
+    "    {\n",
+    "        \"dataset\": ds,\n",
+    "        \"columns\": [\"text\"],\n",
+    "        \"filters\": [check_char_repetition, check_flagged_words],\n",
+    "        \"cleaners\": [remove_empty_lines, normalize_whitespace],\n",
+    "        \"skip_global\": True,\n",
+    "    },\n",
+    "    # ...\n",
+    "]\n",
+    "```\n",
     ":::"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.8 ('squeakily')",
+   "display_name": "Python 3.8.10 64-bit",
    "language": "python",
    "name": "python3"
   }
