Add replacing cleaned data with data generated from faker

--- a/nbs/01_filter.ipynb
+++ b/nbs/01_filter.ipynb
@@ -733,7 +733,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "squeakily",
+   "display_name": "Python 3.10.8 ('squeakily')",
    "language": "python",
    "name": "python3"
   }
