--- a/nbs/02_clean.ipynb
+++ b/nbs/02_clean.ipynb
@@ -25,26 +25,17 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "import re"
+    "import re\n",
+    "from faker import Faker\n",
+    "\n",
+    "fake = Faker()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'nbdev'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-e54b6621ff5b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#| hide\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mnbdev\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshowdoc\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'nbdev'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#| hide\n",
     "from nbdev.showdoc import *"
@@ -206,9 +197,9 @@
    "source": [
     "#| export\n",
     "def replace_urls(\n",
-    "    text: str,                          # The text to replace URLs in\n",
-    "    dummy: str =\"https://example.com/\", # The dummy text to replace URLs with\n",
-    ") -> str:                               # The text with URLs replaced\n",
+    "    text: str,                              # The text to replace URLs in\n",
+    "    dummy: str = \"https://example.com/\",    # The dummy text to replace URLs with\n",
+    ") -> str:                                   # The text with URLs replaced\n",
     "    \"\"\"Replace urls from text with a dummy.\"\"\"\n",
     "    return re.sub(r\"http\\S+\", dummy, text)"
    ]
@@ -234,9 +225,9 @@
    "source": [
     "#| export\n",
     "def replace_dates(\n",
-    "    text: str,              # The text to remove dates from\n",
-    "    dummy: str =\"1/1/1970\", # The string to replace dates with\n",
-    ") -> str:                   # The text with dates replaced\n",
+    "    text: str,                  # The text to remove dates from\n",
+    "    dummy: str = fake.date(),   # The dummy text to replace dates with\n",
+    ") -> str:                       # The text with dates replaced\n",
     "    \"\"\"Replace dates from text with a dummy.\"\"\"\n",
     "    return re.sub(r'\\d{1,2}/\\d{1,2}/\\d{4}', dummy, text)"
    ]
@@ -250,8 +241,8 @@
     "# test the replace_dates function\n",
     "date_after_space = \"foo 1/1/2020\"\n",
     "date_before_space = \"1/1/2020 bar\"\n",
-    "assert replace_dates(date_after_space) == \"foo 1/1/1970\"\n",
-    "assert replace_dates(date_before_space) == \"1/1/1970 bar\""
+    "assert replace_dates(date_after_space, \"1/1/1970\") == \"foo 1/1/1970\"\n",
+    "assert replace_dates(date_before_space, \"1/1/1970\") == \"1/1/1970 bar\""
    ]
   },
   {
@@ -280,7 +271,7 @@
     "#| export\n",
     "def replace_email(\n",
     "    text: str,                          # The text to replace email addresses in\n",
-    "    dummy: str =\"example@email.com\",    # The string to replace email address with\n",
+    "    dummy: str = fake.email(),          # The dummy text to replace email addresses with\n",
     ") -> str:                               # The text with email addresses replaced\n",
     "    \"\"\"Replace email addresses from text with a dummy.\"\"\"\n",
     "    return re.sub(r\"[\\w\\.-]+@[\\w\\.-]+\", dummy, text)"
@@ -298,10 +289,10 @@
     "email_with_forward_periods = \"foo.bar@email.com\"\n",
     "email_with_backward_periods = \"foo@bar.email.com\"\n",
     "\n",
-    "assert replace_email(email_after_space) == \"foo example@email.com\"\n",
-    "assert replace_email(email_before_space) == \"example@email.com bar\"\n",
-    "assert replace_email(email_with_forward_periods) == \"example@email.com\"\n",
-    "assert replace_email(email_with_backward_periods) == \"example@email.com\""
+    "assert replace_email(email_after_space, \"example@email.com\") == \"foo example@email.com\"\n",
+    "assert replace_email(email_before_space, \"example@email.com\") == \"example@email.com bar\"\n",
+    "assert replace_email(email_with_forward_periods, \"example@email.com\") == \"example@email.com\"\n",
+    "assert replace_email(email_with_backward_periods, \"example@email.com\") == \"example@email.com\""
    ]
   },
   {
@@ -312,9 +303,9 @@
    "source": [
     "#| export\n",
     "def replace_phone(\n",
-    "    text: str,                  # The text to replace phone numbers in\n",
-    "    dummy: str =\"123-456-7890\", # The string to replace phone numbers with\n",
-    ") -> str:                       # The text with phone numbers replaced\n",
+    "    text: str,                          # The text to replace phone numbers in\n",
+    "    dummy: str = fake.phone_number(),   # The dummy text to replace phone numbers with\n",
+    ") -> str:                               # The text with phone numbers replaced\n",
     "    \"\"\"Replace phone numbers from text with a dummy.\"\"\"\n",
     "    return re.sub(r\"\\(?\\d{3}\\)?-? *\\d{3}-? *-?\\d{4}\", dummy, text)"
    ]
@@ -332,11 +323,11 @@
     "phone_with_spaces = \"111 222 3333\"\n",
     "phone_with_dashes = \"111-222-3333\"\n",
     "\n",
-    "assert replace_phone(phone_after_space) == \"foo 123-456-7890\"\n",
-    "assert replace_phone(phone_before_space) == \"123-456-7890 bar\"\n",
-    "assert replace_phone(phone_with_parens) == \"123-456-7890\"\n",
-    "assert replace_phone(phone_with_spaces) == \"123-456-7890\"\n",
-    "assert replace_phone(phone_with_dashes) == \"123-456-7890\""
+    "assert replace_phone(phone_after_space, \"123-456-7890\") == \"foo 123-456-7890\"\n",
+    "assert replace_phone(phone_before_space, \"123-456-7890\") == \"123-456-7890 bar\"\n",
+    "assert replace_phone(phone_with_parens, \"123-456-7890\") == \"123-456-7890\"\n",
+    "assert replace_phone(phone_with_spaces, \"123-456-7890\") == \"123-456-7890\"\n",
+    "assert replace_phone(phone_with_dashes, \"123-456-7890\") == \"123-456-7890\""
    ]
   },
   {
@@ -348,8 +339,8 @@
     "#| export\n",
     "def replace_ip(\n",
     "    text,                       # The text to replace ip addresses in\n",
-    "    dummy1=\"127.0.0.1\",         # The string to replace ipv4 addresses with\n",
-    "    dummy2=\"0:0:0:0:0:0:0:1\",   # The string to replace ipv6 addresses with\n",
+    "    dummy1: str = fake.ipv4(),  # The dummy text to replace ipv4 addresses with\n",
+    "    dummy2: str = fake.ipv6(),  # The dummy text to replace ipv6 addresses with\n",
     ") -> str:                       # The text with ip addresses replaced\n",
     "    \"\"\"\n",
     "    Replace ip addresses from text with a dummy.\n",
@@ -373,9 +364,9 @@
     "ip4_before_space = \"111.222.3.4 bar\"\n",
     "ip6_with_colons = \"2001:0db8:0000:0000:0000:8a2e:0370:7334\"\n",
     "\n",
-    "assert replace_ip(ip4_after_space) == \"foo 127.0.0.1\"\n",
-    "assert replace_ip(ip4_before_space) == \"127.0.0.1 bar\"\n",
-    "assert replace_ip(ip6_with_colons) == \"0:0:0:0:0:0:0:1\""
+    "assert replace_ip(ip4_after_space, \"127.0.0.1\") == \"foo 127.0.0.1\"\n",
+    "assert replace_ip(ip4_before_space, \"127.0.0.1\") == \"127.0.0.1 bar\"\n",
+    "assert replace_ip(ip6_with_colons, \"127.0.0.1\", \"0:0:0:0:0:0:0:1\") == \"0:0:0:0:0:0:0:1\""
    ]
   },
   {
@@ -386,9 +377,9 @@
    "source": [
     "#| export\n",
     "def replace_credit_card(\n",
-    "    text: str,                          # The text to replace credit card numbers in\n",
-    "    dummy: str = \"1234-5678-9012-3456\", # The string to replace credit card numbers with\n",
-    ") -> str:                               # The text with credit card numbers replaced\n",
+    "    text: str,                              # The text to replace credit card numbers in\n",
+    "    dummy: str = fake.credit_card_number(), # The dummy text to replace credit card numbers with\n",
+    ") -> str:                                   # The text with credit card numbers replaced\n",
     "    \"\"\"Replace credit card numbers from text with a dummy.\"\"\"\n",
     "    return re.sub(r\"\\d{4}-\\d{4}-\\d{4}-\\d{4}\", dummy, text)"
    ]
@@ -403,8 +394,8 @@
     "credit_card_after_space = \"foo 1111-2222-3333-4444\"\n",
     "credit_card_before_space = \"1111-2222-3333-4444 bar\"\n",
     "\n",
-    "assert replace_credit_card(credit_card_after_space) == \"foo 1234-5678-9012-3456\"\n",
-    "assert replace_credit_card(credit_card_before_space) == \"1234-5678-9012-3456 bar\""
+    "assert replace_credit_card(credit_card_after_space, \"1234-5678-9012-3456\") == \"foo 1234-5678-9012-3456\"\n",
+    "assert replace_credit_card(credit_card_before_space, \"1234-5678-9012-3456\") == \"1234-5678-9012-3456 bar\""
    ]
   },
   {
@@ -416,7 +407,7 @@
     "#| export\n",
     "def replace_ssn(\n",
     "    text: str,                  # The text to replace social security numbers in\n",
-    "    dummy: str = \"123-45-6789\", # The string to replace social security numbers with\n",
+    "    dummy: str = fake.ssn(),    # The dummy text to replace social security numbers with\n",
     ") -> str:                       # The text with social security numbers replaced\n",
     "    \"\"\"Replace social security numbers from text with a dummy.\"\"\"\n",
     "    return re.sub(r\"\\d{3}-\\d{2}-\\d{4}\", dummy, text)"
@@ -432,8 +423,8 @@
     "ssn_after_space = \"foo 111-22-3333\"\n",
     "ssn_before_space = \"111-22-3333 bar\"\n",
     "\n",
-    "assert replace_ssn(ssn_after_space) == \"foo 123-45-6789\"\n",
-    "assert replace_ssn(ssn_before_space) == \"123-45-6789 bar\""
+    "assert replace_ssn(ssn_after_space, \"123-45-6789\") == \"foo 123-45-6789\"\n",
+    "assert replace_ssn(ssn_before_space, \"123-45-6789\") == \"123-45-6789 bar\""
    ]
   },
   {
@@ -449,7 +440,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.8 ('athena')",
+   "display_name": "Python 3.10.8 ('squeakily')",
    "language": "python",
    "name": "python3"
   }
