--- a/nbs/04_tutorials.ipynb
+++ b/nbs/04_tutorials.ipynb
@@ -75,7 +75,7 @@
     "* [url](https://scrubadub.readthedocs.io/en/stable/api_scrubadub_detectors.html#scrubadub-detectors-urldetector) - URLs\n",
     "* [vehicle_license_plate](https://scrubadub.readthedocs.io/en/stable/api_scrubadub_detectors.html#scrubadub-detectors-vehiclelicenceplatedetector) - british vehicle license plates\n",
     "\n",
-    "However, while experimenting with the library it seems some of these are not on by default. Either way, we are only going to focus on the `credit_card`, `drivers_license`, `email`, `phone`, and `social_security_number` decetors. Therefore, we must turn the others off:"
+    "However, while experimenting with the library it seems some of these are not on by default. Either way, we are only going to focus on the `credit_card`, `drivers_license`, `email`, `phone`, and `social_security_number` detectors. Therefore, we must turn the others off:"
    ]
   },
   {
@@ -85,7 +85,7 @@
    "outputs": [],
    "source": [
     "from scrubadub import Scrubber\n",
-    "from scrubadub.detectors import CredentialDetector, PostalCodeDetector, en_GB, TwitterDetector, UrlDetector, VehicleLicencePlateDetector\n",
+    "from scrubadub.detectors import CredentialDetector, TwitterDetector, UrlDetector\n",
     "\n",
     "scrubber = Scrubber()\n",
     "scrubber.remove_detector(CredentialDetector)\n",
@@ -473,7 +473,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.8 ('squeakily')",
+   "display_name": "Python 3.8.10 64-bit",
    "language": "python",
    "name": "python3"
   }
