--- a/nbs/01_filter.ipynb
+++ b/nbs/01_filter.ipynb
@@ -33,6 +33,7 @@
     "import os\n",
     "import random\n",
     "import re\n",
+    "from transformers import AutoTokenizer\n",
     "\n",
     "import dill as pickle\n",
     "import networkit as nk\n",
@@ -144,6 +145,43 @@
     "\n",
     "test_str = \"aaaaaaabbbcccddd\"\n",
     "assert check_char_repetition(test_str, char_repetition_len=3, char_repetition_threshold=0.2) == False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def check_document_length_tokenized(\n",
+    "    document:str, #document to be analyzed\n",
+    "    tokenizer:AutoTokenizer, #tokenizer to tokenize the documents\n",
+    "    document_lower_len_threshold:int = 10, #document length threshold to filter\n",
+    ") -> bool: #returns True if doument length is above threshold else False\n",
+    "    \"\"\"\n",
+    "    Returns True if it's above the threshold, else returns False\n",
+    "    \"\"\"\n",
+    "    tokenized = tokenizer(document).input_ids\n",
+    "    if len(tokenized) > document_lower_len_threshold:\n",
+    "            return True\n",
+    "    else:\n",
+    "            return False\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_str_false = \"single tok\"\n",
+    "test_str_true = \"Hello this is a long text document with the hopes of being greater than threshold\"\n",
+    "\n",
+    "trial_tokenizer = AutoTokenizer.from_pretrained(\"EleutherAI/gpt-neox-20b\")\n",
+    "assert check_document_length_tokenized(test_str_false,tokenizer=trial_tokenizer) ==  False\n",
+    "assert check_document_length_tokenized(test_str_true,tokenizer=trial_tokenizer) ==  True\n"
    ]
   },
   {
@@ -733,7 +771,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.8 ('squeakily')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   }
